# src/routes/categories.routes.ts
@@ -2,8 +2,8 @@ import { Router } from 'express'
 import multer from "multer"
 
 import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"
-import { importCategoryController } from '../modules/cars/useCases/importCategory'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
 
 
 
@@ -15,15 +15,13 @@ const upload = multer({
 })
 
 const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
 
 categoriesRoutes.post("/", createCategoryController.handle)
 
-categoriesRoutes.get("/", (request, response) => {
-    return listCategoriesController.handle(request, response)
-})
+categoriesRoutes.get("/", listCategoriesController.handle)
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-    return importCategoryController.handle(request, response)
-})
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle)
 
 export { categoriesRoutes }
