# src/routes/specifications.routes.ts
@@ -1,13 +1,12 @@
 import { Router } from "express";
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification'
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController'
 
 
 const specificationsRoutes = Router()
 
+const createSpecificationController = new CreateSpecificationController()
 
-specificationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response)
-})
+specificationsRoutes.post("/", createSpecificationController.handle)
 
 export { specificationsRoutes}
